Code Block Wrap Fix
That was annoying.

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -164,6 +164,10 @@ header {
                 color: $mainTextColor;
             }
 
+            .pre {
+                white-space: normal;
+            }
+
             word-break: break-word;
             word-wrap: break-word;
         }
